# contemplative-moltbook

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  README.zh-TW.md  docker-compose.yml  docker-entrypoint.sh  graph.jsonld  llms-full.txt  llms.txt  pyproject.toml  pyrightconfig.json
.claude/skills/: agent-run.md  contemplative-agent-patterns.md  moltbook-adapter-patterns.md  moltbook-report.md
.reports/: adr-0021-audit-followups-20260418.md  adr-0021-implementation-audit-20260418.md  cluster-experiment-20260417.md  codemap-diff.txt  emergent-axiom-self-reference-20260418.md  followup-issues-20260417.md  is-live-consumer-audit-20260418.md  phase-5-report.md  remaining-issues-2026-04-16.md  remaining-issues-2026-04-18.md  retrieval-scoring-effect-20260418.json  retrieval-scoring-effect-20260418.md  rules-distill-threshold-sweep-result-20260418.md  rules-distill-threshold-sweep.py  threshold-calibration-20260417.md  threshold-sweep.py
.reports/archive/: d3-per-block-distill-handoff.md
.reports/skills-baseline-20260417/: fluid-resonant-engagement-cycle-20260416.md
config/: domain.json  identity.md  knowledge.json
config/constitution/: contemplative-axioms.md
config/launchd/: com.moltbook.agent.plist  com.moltbook.distill.plist  com.moltbook.ollama-restart.plist
config/prompts/: comment.md  constitution_amend.md  cooperation_post.md  distill.md  distill_classify.md  distill_constitutional.md  distill_importance.md  distill_rarity.md  distill_refine.md  distill_subcategorize.md  eval.md  identity_distill.md  identity_refine.md  insight_eval.md  insight_extraction.md  insight_group.md  memory_evolution.md  post_title.md  principles.md  relevance.md  reply.md  rules_distill.md  rules_distill_refine.md  session_insight.md  skill_reflect.md  stocktake_merge.md  stocktake_merge_rules.md  submolt_selection.md  system.md  topic_extraction.md  topic_novelty.md  topic_summary.md  weekly-analysis.md
config/rules/: README.md
config/skills/: 2026-03-16-dynamic-boundary-setting.md  anchored-resonance-engagement-20260320.md  calibrated-anchoring-pruning.md  calibrated-context-anchoring.md  calibrated-data-anchor-engagement-20260320.md  concrete-resonance-engagement-20260320.md  constraint-anchored-deliberation.md  constraint-anchored-engagement-20260320.md  constraint-anchored-engagement.md  context-anchored-engagement.md  data-anchored-engagement.md  resonance-grounded-engagement-20260320.md  resonance-grounded-participation-20260320.md  specificity-first-engagement-20260320.md
config/templates/: identity-default.md
config/views/: communication.md  constitutional.md  noise.md  reasoning.md  self_reflection.md  social.md  technical.md
docs/: CONFIGURATION.ja.md  CONFIGURATION.md  ROADMAP.md  examples-for-laukkonen.md  glossary.md  moltbook-api.md
docs/CODEMAPS/: INDEX.md  adapters-moltbook.md  architecture.md  core-modules.md  dependencies.md  moltbook-agent.md
docs/adr/: 0001-core-adapter-separation.md  0002-paper-faithful-ccai.ja.md  0002-paper-faithful-ccai.md  0003-config-directory-design.md  0004-three-layer-memory.md  0005-session-context-refactoring.md  0006-docker-network-isolation.ja.md  0006-docker-network-isolation.md  0007-security-boundary-model.ja.md  0007-security-boundary-model.md  (+58 more)
integrations/: README.md
scripts/: backfill_truncated_posts.py  cleanup_reflective_note_episodes.py  launch-phase.sh  prompt_ab_test.py  sync-research-data.sh  weekly-analysis.sh
tests/: benchmark_distill.py  conftest.py  test_agent.py  test_auth.py  test_cli.py  test_client.py  test_clustering.py  test_constitution.py  test_content.py  test_dedup.py  test_dialogue_peer.py  test_distill.py  test_domain.py  test_embeddings.py  test_episode_embeddings.py  test_identity_blocks.py  test_insight.py  test_knowledge_store.py  test_llm.py  test_llm_backend.py  test_memory.py  test_memory_evolution.py  test_migration.py  test_report.py  test_rules_distill.py  test_scheduler.py  test_session_context.py  test_skill_frontmatter.py  test_skill_reflect.py  test_skill_router.py  test_snapshot.py  test_stocktake.py  test_verification.py  test_views.py
(+125 files in other folders)
