[project]
name = "contemplative-agent"
version = "1.2.0"
description = "A general-purpose agent framework that self-updates skills, rules, ethics, and identity from experience"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["requests>=2.33.0", "numpy>=1.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "responses>=0.23.0"]

[project.scripts]
contemplative-agent = "contemplative_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contemplative_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[dependency-groups]
dev = []
